bar value in legend

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
@@ -294,7 +294,7 @@ span.table-resize{
 
 .controller-legend {
     font-size: 0.7em;
-    padding: 1px 0;
+    /*padding: 1px 0;*/
     text-align: center;
     -moz-transition: background 0.3s;
     -o-transition: background 0.3s;
