bar chart legend value

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
@@ -140,6 +140,10 @@ span.table-resize{
     color: black;
 }
 
+.controller-legend-value {
+    background-color: #00b8c8;
+}
+
 .silhouette {
     fill: #272727;
     transition: fill 0.3s;
