--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style.css
@@ -137,6 +137,10 @@ span.table-resize{
     color: black;
 }
 
+.controller-legend-value {
+    background-color: #dbdbdb;
+}
+
 .silhouette {
     fill: #eaeaea;
     transition: fill 0.3s;
