--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
@@ -302,6 +302,16 @@ span.table-resize{
     transition: background 0.3s;
 }
 
+.controller-legend-value {
+    position: absolute;
+    right: 5px;
+    text-align: right;
+    -moz-transition: background 0.3s;
+    -o-transition: background 0.3s;
+    -webkit-transition: background 0.3s;
+    transition: background 0.3s;
+}
+
 .gauge-controller-wrapper {
     display: flex;
     flex-direction: column;
@@ -465,17 +475,20 @@ span.table-resize{
     padding: 5px 5px;
 }
 
-.small {
-    font-size: 0.6em;
+.listitem:hover {
+    cursor: pointer;
 }
 
-.comp-button {    
+.comp-button {
     display: inline-block;
     padding: 3px 5px;
     margin: 1px;
     min-width: 70px;
     text-align: center;
-    min-height: 23px;    
+    -moz-transition: background 0.3s;
+    -o-transition: background 0.3s;
+    -webkit-transition: background 0.3s;
+    transition: background 0.3s;
 }
 
 .comp-button:hover {
