--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
@@ -486,6 +486,7 @@ span.table-resize{
     margin: 1px;
     min-width: 70px;
     text-align: center;
+    min-height: 23px;
     -moz-transition: background 0.3s;
     -o-transition: background 0.3s;
     -webkit-transition: background 0.3s;
@@ -505,6 +506,7 @@ span.table-resize{
     text-align: center;
     min-height: 23px;    
 }
+
 
 .comp-button span {
     vertical-align: middle;
