--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app.css
@@ -650,16 +650,10 @@ span.table-resize{
     position: absolute;
     z-index: 1000;
     top: 40px;
-    width: 220px;
     height: 100%;
     background-color: darkolivegreen;
-    /*
-    transition: left 0.3s;*/
 }
 
-.slidingMenu-retracted {
-    left: -220px;
-}
 
 .slidingMenu-touchArea {
     top: 40px;
@@ -667,4 +661,5 @@ span.table-resize{
     position: absolute;
     height: 100%;
     width: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
