almost finished sliding menu, tweaked some list styles

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style-dark.css
@@ -265,3 +265,8 @@ span.table-resize{
 .comp-listBoxRearr-marker {
     background-color: #171717;
 }
+
+
+.comp-tempDataSourceList-item:hover {
+    background-color: #4a4a4a;
+}
