--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style.css
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/Style/app-style.css
@@ -257,3 +257,7 @@ span.table-resize{
 .comp-listBoxRearr-marker {
     background-color: #bebebe;
 }
+
+.comp-tempDataSourceList-item:hover {
+    background-color: #dbdbdb;
+}
